--- a/index.html
+++ b/index.html
@@ -19,82 +19,91 @@
     <![endif]-->
   <link rel="icon" href="http://jkh-magnolia.ru/favicon.ico" type="image/x-icon">
   <link rel="shortcut icon" href="http://jkh-magnolia.ru/favicon.ico" type="image/x-icon">
-  <script src="http://finevision.ru/static/js/finevision_banner.js"></script>
+  <!--<script src="http://finevision.ru/static/js/finevision_banner.js"></script>-->
 </head>
-<body>
 
-  <div id="body">
-      <div id="fvb" itemprop="Copy" style="z-index:99;background:#fff;position:fixed;right:0;top:0;border:2px solid #000;">
-        <a href="http://finevision.ru/?hostname=jkh-magnolia.ru&path=/"><img src="http://finevision.ru/static/banner2.jpg" width="128" height="64"></a>
-      </div>
-      <div class="blockl">
-        <div class="logo"><span class="logo1">Магнолия</span><br /><span class="logo2">Управляющая компания</span></div>
-        <ul>
-          <li><a href="http://jkh-magnolia.ru" class="li1">Главная</a></li>
-          <li><a href="/dokumenty" class="li2">Документы по ООО</a></li>
-          <li class="double"><a href="/normativnyie-dokumentyi" class="li8">Нормативные<br />документы</a></li>
-          <li><a href="/dogovora" class="li17">Договора</a></li>
-          <li><a href="/perepiska" class="li3">Деловая переписка</a></li>
-          <li><a href="/obyyavleniya" class="li9">Объявления</a></li>
-          <li class="double"><a href="/obschie-sobraniya" class="li4">Общие<br />собрания</a></li>
-          <li class="double"><a href="/narusheniya" class="li10">Административная ответственность</a></li>
-          <li class="double"><a href="/osnovnyie-finansovyie-pokazateli" class="li11">Основные финансовые<br />показатели</a></li>
-          <li><a href="/otchetyi" class="li12">Отчеты по МКД</a></li>
-          <li><a href="/plan-raboty" class="li16">План работы</a></li>
-          <li><a href="http://hronika.jkh-magnolia.ru/" class="li15">Хроника работ</a></li>
-          <li><a href="/tarif" class="li13">Тарифы</a></li>
-          <li><a href="/obyektyi" class="li5">Дома в управлении</a></li>
-          <li><a href="/vopros-otvet" class="li14">Вопрос - ответ</a></li>
-          <li><a href="/kontaktyi" class="li7">Контакты</a></li>
-        </ul>
-        <div class="blockf">
-          <a href="https://online.sberbank.ru" target="_blank"><img src="images/sber2.png" /></a>
-        </div>
-      </div>
-      <div class="blockr">
-        <div class="content">
-          <div class="ctabl">
-            <h1>Управляющая компания Магнолия</h1>
-            <p>   В связи со сложной эпидемиологической обстановкой, участившимся выявлением положительных случаев новой коронавирусной инфекции (COVID-2019), учитывая Постановление главы администрации (губернатора) Краснодарского края от 13.03.2020 № 129 "О введении режима повышенной готовности на территории Краснодарского края и мерах по предотвращению распространения новой коронавирусной инфекции (COVID-2019)" (с последующими изменениями и дополнениями), в целях предупреждения распространения в офисе ООО «УК Магнолия» новой коронавирусной инфекции (COVID-2019), обеспечения безопасных условий труда, сохранности жизни и здоровья сотрудников, а также его посетителей:</p>
+<body class="page-body">
+  <header class="header">
+    <!--<div id="fvb" itemprop="Copy" style="z-index:99;background:#fff;position:fixed;right:0;top:0;border:2px solid #000;">
+      <a href="http://finevision.ru/?hostname=jkh-magnolia.ru&path=/">
+        <img src="http://finevision.ru/static/banner2.jpg" width="128" height="64">
+      </a>
+    </div>-->
 
-            <p><b  style="text-align: center;">  Прием граждан,
-              а также выдача документов в офисе
-              ООО УК Магнолия» не производятся.</b>
-            </p>
-            <p>  Прием и выдача документов осуществляются
-              посредством почтовых отправлений по адресу:
-              г. Анапа, ул. Крылова, д. 6 или
-              по электронной почте:
-            </p>
-            <p  style="text-align: center;">gk-magnolia@yandex.ru
-              Тел. 8 (86133) 3-94-43</p>
-              <img src="images/jkh-main.jpg" style="width:100%" />
+      <div class="logo">
+        <span class="logo1">Магнолия</span><br /><span class="logo2">Управляющая компания</span>
+      </div>
+      <ul class="menu header__menu">
+        <li><a href="http://jkh-magnolia.ru" class="li1">Главная</a></li>
+        <li><a href="/dokumenty" class="li2">Документы по ООО</a></li>
+        <li class="double"><a href="/normativnyie-dokumentyi" class="li8">Нормативные<br />документы</a></li>
+        <li><a href="/dogovora" class="li17">Договора</a></li>
+        <li><a href="/perepiska" class="li3">Деловая переписка</a></li>
+        <li><a href="/obyyavleniya" class="li9">Объявления</a></li>
+        <li class="double"><a href="/obschie-sobraniya" class="li4">Общие<br />собрания</a></li>
+        <li class="double"><a href="/narusheniya" class="li10">Административная ответственность</a></li>
+        <li class="double"><a href="/osnovnyie-finansovyie-pokazateli" class="li11">Основные финансовые<br />показатели</a></li>
+        <li><a href="/otchetyi" class="li12">Отчеты по МКД</a></li>
+        <li><a href="/plan-raboty" class="li16">План работы</a></li>
+        <li><a href="http://hronika.jkh-magnolia.ru/" class="li15">Хроника работ</a></li>
+        <li><a href="/tarif" class="li13">Тарифы</a></li>
+        <li><a href="/obyektyi" class="li5">Дома в управлении</a></li>
+        <li><a href="/vopros-otvet" class="li14">Вопрос - ответ</a></li>
+        <li><a href="/kontaktyi" class="li7">Контакты</a></li>
+      </ul>
+      <div class="blockf">
+        <a href="https://online.sberbank.ru" target="_blank"><img src="images/sber2.png" /></a>
+      </div>
+
+  </header>
+  <main class="content">
+    <div class="blockr">
+      <div class="content">
+        <div class="ctabl">
+          <h1>Управляющая компания Магнолия</h1>
+          <p>   В связи со сложной эпидемиологической обстановкой, участившимся выявлением положительных случаев новой коронавирусной инфекции (COVID-2019), учитывая Постановление главы администрации (губернатора) Краснодарского края от 13.03.2020 № 129 "О введении режима повышенной готовности на территории Краснодарского края и мерах по предотвращению распространения новой коронавирусной инфекции (COVID-2019)" (с последующими изменениями и дополнениями), в целях предупреждения распространения в офисе ООО «УК Магнолия» новой коронавирусной инфекции (COVID-2019), обеспечения безопасных условий труда, сохранности жизни и здоровья сотрудников, а также его посетителей:</p>
+
+          <p><b  style="text-align: center;">  Прием граждан,
+            а также выдача документов в офисе
+            ООО УК Магнолия» не производятся.</b>
+          </p>
+          <p>  Прием и выдача документов осуществляются
+            посредством почтовых отправлений по адресу:
+            г. Анапа, ул. Крылова, д. 6 или
+            по электронной почте:
+          </p>
+          <p  style="text-align: center;">gk-magnolia@yandex.ru
+            Тел. 8 (86133) 3-94-43</p>
+            <img src="images/jkh-main.jpg" style="width:100%" />
+            <p></p>
+            <p>Сведения о количестве случаев снижения платы за нарушения качества коммунальных услуг и (или) за превышение установленной продолжительности перерывов в их оказании за последний календарный год: <b>нет</b></p>
+            <p>Сведения о количестве случаев снижения платы за нарушения качества содержания и ремонта общего имущества в многоквартирном доме за последний календарный год: <b>нет</b></p>
+            <p>Сведения о фактах выявления ненадлежащего качества услуг или выполнении работ не в соответствии с устанавливаемыми Правительством Российской Федерации правилами содержания общего имущества в многоквартирном доме и правилами предоставления коммунальных услуг собственникам и пользователями помещений в многоквартирных домах и жилых домах: <b>нет</b></p>
+            <p></p>
+            <h3>НАИМЕНОВАНИЯ, АДРЕСА И ТЕЛЕФОНЫ КОНТРОЛИРУЮЩИХ ОРГАНОВ ИСПОЛНИТЕЛЬНОЙ ВЛАСТИ </h3>
+            <p><b>ТО Роспотребнадзор по г. Анапа:</b> г. Анапа ул. Трудящихся 1-а, тел. 3-27-84<br />
+              <b>Государственная жилищная инспекция Краснодарского края:</b> г. Краснодар ул. Красная 176-178, тел. 8(861) 259-44-03, 8 (861) 251-64-36 (по обращениям граждан)<br />
+              <b>Управление жилищно-коммунального хозяйства МО Анапа:</b>г. Анапа, ул. Крымская ул., д. 150, тел. 8 (86133) 2-86-03.<br />
+              <b>Инспекция федеральной» налоговой службы по г-к Анапа:</b> г. Анапа ул. Шевченко д. 1, тел. 4-91-00.</p>
               <p></p>
-              <p>Сведения о количестве случаев снижения платы за нарушения качества коммунальных услуг и (или) за превышение установленной продолжительности перерывов в их оказании за последний календарный год: <b>нет</b></p>
-              <p>Сведения о количестве случаев снижения платы за нарушения качества содержания и ремонта общего имущества в многоквартирном доме за последний календарный год: <b>нет</b></p>
-              <p>Сведения о фактах выявления ненадлежащего качества услуг или выполнении работ не в соответствии с устанавливаемыми Правительством Российской Федерации правилами содержания общего имущества в многоквартирном доме и правилами предоставления коммунальных услуг собственникам и пользователями помещений в многоквартирных домах и жилых домах: <b>нет</b></p>
-              <p></p>
-              <h3>НАИМЕНОВАНИЯ, АДРЕСА И ТЕЛЕФОНЫ КОНТРОЛИРУЮЩИХ ОРГАНОВ ИСПОЛНИТЕЛЬНОЙ ВЛАСТИ </h3>
-              <p><b>ТО Роспотребнадзор по г. Анапа:</b> г. Анапа ул. Трудящихся 1-а, тел. 3-27-84<br />
-                <b>Государственная жилищная инспекция Краснодарского края:</b> г. Краснодар ул. Красная 176-178, тел. 8(861) 259-44-03, 8 (861) 251-64-36 (по обращениям граждан)<br />
-                <b>Управление жилищно-коммунального хозяйства МО Анапа:</b>г. Анапа, ул. Крымская ул., д. 150, тел. 8 (86133) 2-86-03.<br />
-                <b>Инспекция федеральной» налоговой службы по г-к Анапа:</b> г. Анапа ул. Шевченко д. 1, тел. 4-91-00.</p>
-                <p></p>
-                <h3>ТЕЛЕФОНЫ ДИСПЕТЧЕРСКИХ И АВАРИЙНЫХ СЛУЖБ ГОРОДА АНАПА </h3>
-                <p><b>ОАО «Кубаньэнергосбыт»:</b> 5-02-07<br />
-                  <b>ВТ Ресурс (электроснабжающая компания):</b> 8 (8617) 65-49-98<br />
-                  <b>Диспетчер ОАО «Анапа Водоканал»:</b> 2-09-48<br />
-                  <b>Диспетчер ООО «Клен» (мусор):</b> 8 (988) 311-33-22<br />
-                  <b>ООО «СП «ЛИФТ» (Лифт):</b> 5-65-98, 8 (918) 17-83-500<br />
-                  <b>ИП Батраков (Лифт):</b> 8 (86133) 5-92-60<br />
-                  <b>Горгаз:</b> 04, 4-39-65 </p>
-                </div>
+              <h3>ТЕЛЕФОНЫ ДИСПЕТЧЕРСКИХ И АВАРИЙНЫХ СЛУЖБ ГОРОДА АНАПА </h3>
+              <p><b>ОАО «Кубаньэнергосбыт»:</b> 5-02-07<br />
+                <b>ВТ Ресурс (электроснабжающая компания):</b> 8 (8617) 65-49-98<br />
+                <b>Диспетчер ОАО «Анапа Водоканал»:</b> 2-09-48<br />
+                <b>Диспетчер ООО «Клен» (мусор):</b> 8 (988) 311-33-22<br />
+                <b>ООО «СП «ЛИФТ» (Лифт):</b> 5-65-98, 8 (918) 17-83-500<br />
+                <b>ИП Батраков (Лифт):</b> 8 (86133) 5-92-60<br />
+                <b>Горгаз:</b> 04, 4-39-65 </p>
               </div>
             </div>
           </div>
-          <div id="footer">
-            <div class="footl">ООО "Упраляющая компания Магнолия"</div>
-            <div class="footr"><a href="http://onlymaster.ru" target="_blank">Создание сайта</a> - OnlyMaster</div>
-          </div>
+  </main>
+  <footer class="footer">
+    <div id="footer">
+      <div class="footl">ООО "Упраляющая компания Магнолия"</div>
+      <div class="footr"><a href="http://onlymaster.ru" target="_blank">Создание сайта</a> - OnlyMaster</div>
+    </div>
+  </footer>
+
         </body>
         </html>
