--- a/index.html
+++ b/index.html
@@ -33,30 +33,67 @@
       <div class="logo">
         <span class="logo1">Магнолия</span><br /><span class="logo2">Управляющая компания</span>
       </div>
-      <ul class="menu header__menu">
-        <li><a href="http://jkh-magnolia.ru" class="li1">Главная</a></li>
-        <li><a href="/dokumenty" class="li2">Документы по ООО</a></li>
-        <li class="double"><a href="/normativnyie-dokumentyi" class="li8">Нормативные<br />документы</a></li>
-        <li><a href="/dogovora" class="li17">Договора</a></li>
-        <li><a href="/perepiska" class="li3">Деловая переписка</a></li>
-        <li><a href="/obyyavleniya" class="li9">Объявления</a></li>
-        <li class="double"><a href="/obschie-sobraniya" class="li4">Общие<br />собрания</a></li>
-        <li class="double"><a href="/narusheniya" class="li10">Административная ответственность</a></li>
-        <li class="double"><a href="/osnovnyie-finansovyie-pokazateli" class="li11">Основные финансовые<br />показатели</a></li>
-        <li><a href="/otchetyi" class="li12">Отчеты по МКД</a></li>
-        <li><a href="/plan-raboty" class="li16">План работы</a></li>
-        <li><a href="http://hronika.jkh-magnolia.ru/" class="li15">Хроника работ</a></li>
-        <li><a href="/tarif" class="li13">Тарифы</a></li>
-        <li><a href="/obyektyi" class="li5">Дома в управлении</a></li>
-        <li><a href="/vopros-otvet" class="li14">Вопрос - ответ</a></li>
-        <li><a href="/kontaktyi" class="li7">Контакты</a></li>
-      </ul>
-      <div class="blockf">
-        <a href="https://online.sberbank.ru" target="_blank"><img src="images/sber2.png" /></a>
-      </div>
 
+      <ul class="menu header-menu">
+        <li class="header-menu__item">
+          <a href="http://jkh-magnolia.ru" class="li1">Главная</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="/obyektyi">Дома в управлении</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="/vopros-otvet" class="li14">Вопрос - ответ</a>
+        </li>
+        <li class="header-menu__item">
+          <a href="/kontaktyi" class="li7">Контакты</a>
+        </li>
+      </ul>
   </header>
+
   <main class="content">
+    <ul class="menu side-menu">
+      <li class="side-menu__item">
+        <a href="/dokumenty" class="li2">Документы по ООО</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/normativnyie-dokumentyi" class="li8">Нормативные документы</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/dogovora" class="li17">Договора</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/perepiska" class="li3">Деловая переписка</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/obyyavleniya" class="li9">Объявления</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/obschie-sobraniya" class="li4">Общие собрания</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/narusheniya" class="li10">Административная ответственность</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/osnovnyie-finansovyie-pokazateli" class="li11">Основные финансовые показатели</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/otchetyi" class="li12">Отчеты по МКД</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/plan-raboty" class="li16">План работы</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="http://hronika.jkh-magnolia.ru/" class="li15">Хроника работ</a>
+      </li>
+      <li class="side-menu__item">
+        <a href="/tarif" class="li13">Тарифы</a>
+      </li>
+
+    </ul>
+    <div class="blockf">
+      <a href="https://online.sberbank.ru" target="_blank"><img src="images/sber2.png" /></a>
+    </div>
+
     <div class="blockr">
       <div class="content">
         <div class="ctabl">
