--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
 
       <ul class="menu header-menu">
         <li class="header-menu__item">
-          <a href="http://jkh-magnolia.ru" class="li1">Главная</a>
+          <a href="http://jkh-magnolia.ru">Главная</a>
         </li>
         <li class="header-menu__item">
           <a href="/obyektyi">Дома в управлении</a>
         </li>
         <li class="header-menu__item">
-          <a href="/vopros-otvet" class="li14">Вопрос - ответ</a>
+          <a href="/vopros-otvet">Вопрос - ответ</a>
         </li>
         <li class="header-menu__item">
-          <a href="/kontaktyi" class="li7">Контакты</a>
+          <a href="/kontaktyi">Контакты</a>
         </li>
       </ul>
   </header>
@@ -53,40 +53,40 @@
   <main class="content">
     <ul class="menu side-menu">
       <li class="side-menu__item">
-        <a href="/dokumenty" class="li2">Документы по ООО</a>
+        <a href="/dokumenty">Документы по ООО</a>
       </li>
       <li class="side-menu__item">
-        <a href="/normativnyie-dokumentyi" class="li8">Нормативные документы</a>
+        <a href="/normativnyie-dokumentyi">Нормативные документы</a>
       </li>
       <li class="side-menu__item">
-        <a href="/dogovora" class="li17">Договора</a>
+        <a href="/dogovora">Договора</a>
       </li>
       <li class="side-menu__item">
-        <a href="/perepiska" class="li3">Деловая переписка</a>
+        <a href="/perepiska">Деловая переписка</a>
       </li>
       <li class="side-menu__item">
-        <a href="/obyyavleniya" class="li9">Объявления</a>
+        <a href="/obyyavleniya">Объявления</a>
       </li>
       <li class="side-menu__item">
-        <a href="/obschie-sobraniya" class="li4">Общие собрания</a>
+        <a href="/obschie-sobraniya">Общие собрания</a>
       </li>
       <li class="side-menu__item">
-        <a href="/narusheniya" class="li10">Административная ответственность</a>
+        <a href="/narusheniya">Административная ответственность</a>
       </li>
       <li class="side-menu__item">
-        <a href="/osnovnyie-finansovyie-pokazateli" class="li11">Основные финансовые показатели</a>
+        <a href="/osnovnyie-finansovyie-pokazateli">Основные финансовые показатели</a>
       </li>
       <li class="side-menu__item">
-        <a href="/otchetyi" class="li12">Отчеты по МКД</a>
+        <a href="/otchetyi">Отчеты по МКД</a>
       </li>
       <li class="side-menu__item">
-        <a href="/plan-raboty" class="li16">План работы</a>
+        <a href="/plan-raboty">План работы</a>
       </li>
       <li class="side-menu__item">
-        <a href="http://hronika.jkh-magnolia.ru/" class="li15">Хроника работ</a>
+        <a href="http://hronika.jkh-magnolia.ru/">Хроника работ</a>
       </li>
       <li class="side-menu__item">
-        <a href="/tarif" class="li13">Тарифы</a>
+        <a href="/tarif">Тарифы</a>
       </li>
 
     </ul>
